Cleanup null annotations
Signed-off-by: Sam Barker <sam@quadrocket.co.uk>